# CoreBrick-C

./: .gitignore  AUDIT_INDEX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml
benchmarks/: bench_file.c  bench_hash.c  bench_main.c  bench_timer.c  bench_vector.c
cli/: cbcli.c
cmake/: CoreBrickConfig.cmake.in
docs/: api_policy.md  api_reference.md  architecture.md  arena.md  bitset.md  bloom.md  buffer.md  ci_guide.md  examples_guide.md  file.md  hash.md  install.md  module_matrix.md  release_notes.md  release_package.md  review_guide.md  review_report_v0.1.0.md  review_report_v0.2.0.md  review_report_v0.3.0.md  review_report_v0.3.1.md  review_report_v0.3.2.md  review_report_v0.3.3.md  review_report_v0.4.0.md  review_report_v0.4.1.md  review_report_v0.4.2.md  ring.md  roadmap.md  string_map.md  string_view.md  testing_guide.md  timer.md  vector.md
examples/: arena_example.c  bitset_example.c  bloom_example.c  buffer_example.c  file_example.c  hash_example.c  minimal_example.c  ring_example.c  string_map_example.c  string_view_example.c  timer_example.c  vector_example.c
examples/embed_minimal_project/: CMakeLists.txt  README.md  main.c
include/: cb_arena.h  cb_bitset.h  cb_bloom.h  cb_buffer.h  cb_error.h  cb_file.h  cb_hash.h  cb_ring.h  cb_string_map.h  cb_string_view.h  cb_timer.h  cb_vector.h  corebrick.h  corebrick_version.h
scripts/: build_release.ps1  check_no_artifacts.ps1  check_version.ps1  install_test.ps1  install_test.sh  package_release.ps1  run_tests.ps1  smoke_test.ps1  validate_all.ps1
src/: cb_arena.c  cb_bitset.c  cb_bloom.c  cb_buffer.c  cb_error.c  cb_file.c  cb_hash.c  cb_ring.c  cb_string_map.c  cb_string_view.c  cb_timer.c  cb_vector.c
tests/: test_arena.c  test_bitset.c  test_bloom.c  test_buffer.c  test_edge_cases.c  test_file.c  test_hash.c  test_main.c  test_ring.c  test_string_map.c  test_string_view.c  test_timer.c  test_vector.c
tests/cmake_install_test/: CMakeLists.txt  test_install.c
